@@ -279,6 +279,7 @@
 \input stopwtch.tex
 \input strmbase.tex
 \input stream.tex
+\input strtotxt.tex
 \input wxstring.tex
 \input propstfv.tex
 \input strlist.tex
